--- a/style.css
+++ b/style.css
@@ -1,20 +1,34 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+:root {
+    --primary-color: #FFD503;
+    --footer: #383737;
+}
+
+body {
+    font-family: 'DM Sans', sans-serif;
+    width: 100vw;
+    overflow-x: hidden;
+}
+
 nav {
     height: 80px;
+    width: 100vw;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    overflow-x: hidden;
 }
 
 nav img {
     cursor: pointer;
     height: 80px;
-    /* background-color: red; */
     fill: none;
 }
 
@@ -74,20 +88,27 @@ nav .burger-container.open .burger::after {
     width: 0vw;
     background-color: rgba(0, 0, 0, 0.12);
     z-index: 2;
-    transition: all .5s ease;
+    transition: all .2s ease;
     display: flex;
     flex-direction: column;
 }
 
 .links-container.fill {
     width: 100vw;
+    height: 100vh;
 }
 
 .nav-links {
     height: 100%;
-    width: 70%;
+    width: 0vw;
     background-color: white;
     align-self: flex-end;
+    display: none;
+}
+
+.nav-links.active {
+    display: flex;
+    width: 70%;
 }
 
 .nav-links ul {
@@ -101,14 +122,44 @@ nav .burger-container.open .burger::after {
 
 .nav-links ul li {
     list-style: none;
-    background-color: yellow;
+    background-color: var(--primary-color);
     width: 100%;
     display: grid;
     place-items: center;
-    height: 50px;
+    height: 80px;
     text-transform: uppercase;
-    font-weight: 700; 
-    /* display: flex; */
-    /* justify-content: center; */
-    /* align-items: center; */
-}
+    font-weight: 700;
+ }
+
+ .nav-links ul li a {
+    text-decoration: none;
+    color: black;  
+ }
+
+ @media (min-width:740px) {
+    nav .burger-container {
+        display: none;
+    }
+
+    nav .links-container {
+        position: relative;
+        /* background-color: transparent; */
+        width: 630px;
+    }
+
+    .nav-links {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        width: 100%;
+    }
+
+    .nav-links ul {
+        flex-direction: row;
+        align-items: center;
+    }
+
+    .nav-links ul li {
+        background-color: transparent;
+    }
+ }
