--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
   font-family: "DM Sans", sans-serif;
   width: 100vw;
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
 nav {
@@ -149,6 +150,7 @@ nav .burger-container.open .burger::after {
 }
 
 #home p {
+    font-size: 18px;
   margin-bottom: 30px;
 }
 
@@ -189,7 +191,52 @@ nav .burger-container.open .burger::after {
 }   
 
 #home .hero-images {
-    margin-top: 60px;
+    margin-top: 40px;
+    display: flex;
+    /* background-color: red; */
+    flex-direction: column;
+    justify-content: center;
+    /* align-items: center; */
+    /* width: 100%; */
+}
+
+#home .hero-images .top-images, #home .hero-images .bottom-images {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+#home .hero-images .top-images {
+    margin-bottom: 20px;
+}
+
+#home .hero-images .top-images .middle-one {
+    align-self: flex-end;
+}
+
+#home .hero-images .bottom-images .middle-two {
+    align-self: flex-start;
+}
+
+#home .hero-images img {
+    width: 30%;
+}
+
+/* ABOUT SECTION *//* ABOUT SECTION *//* ABOUT SECTION *//* ABOUT SECTION */
+#about {
+    padding: 0 27px;
+    margin: 30px 0;
+}
+
+#about h2 {
+    color: var(--primary-color);
+    text-transform: uppercase;
+    font-size: 25px;
+}
+
+#about p {
+    font-size: 22px;
+    font-weight: 400;
 }
 
 @media (max-width: 340px ) {
@@ -212,6 +259,10 @@ nav .burger-container.open .burger::after {
 
     #home button a .btn-text {
         font-size: 10px;
+    }
+
+    #about {
+        padding: 0 10px;
     }
 }
 
@@ -288,17 +339,20 @@ nav .burger-container.open .burger::after {
   }
 
   #home .hero-images {
-    display: flex;
-    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 100%;
   }
 
   #home .hero-images .top-images, #home .hero-images .bottom-images {
     display: flex;
-  }
+    justify-content: space-evenly;
+}
 
   #home .hero-images img {
     height: 300px;
     width: 200px;
+    /* flex-basis: 1; */
     margin: 0 10px;
   }
 
@@ -311,4 +365,29 @@ nav .burger-container.open .burger::after {
   #home .btn-div {
     width: 40%;
   }  
+
+  #home .hero-images {
+    flex-direction: row;
+  }
+
+  #home .hero-images .top-images, #home .hero-images .bottom-images {
+    width: 50%;
+  }
+
+  #home .hero-images .top-images .middle-one,#home .hero-images .bottom-images .middle-two{
+    align-self: flex-start;
+  }
+
+  #home .hero-images img {
+    width: 30%;
+    /* flex-basis: 1; */
+  }
+}
+
+@media (min-width: 1350px) {
+ #home .hero-images img {
+    height: 300px;
+    width: 200px;
+    margin: 0 10px;
+  }   
 }
