--- a/style.css
+++ b/style.css
@@ -145,12 +145,12 @@ nav .burger-container.open .burger::after {
 }
 
 #home h1 {
-  font-size: 26px;
+  font-size: 30px;
   margin: 40px 0 10px 0;
 }
 
 #home p {
-    font-size: 18px;
+    font-size: 20px;
   margin-bottom: 30px;
 }
 
@@ -202,6 +202,7 @@ nav .burger-container.open .burger::after {
 
 #home .hero-images .top-images, #home .hero-images .bottom-images {
     width: 100%;
+    height: 300px;
     display: flex;
     justify-content: space-between;
 }
