--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@ nav .burger-container.open .burger::after {
 
 #home .hero-images .top-images, #home .hero-images .bottom-images {
     width: 100%;
-    height: 300px;
+    height: auto;
     display: flex;
     justify-content: space-between;
 }
