--- a/style.css
+++ b/style.css
@@ -14,8 +14,11 @@
 body {
   font-family: "DM Sans", sans-serif;
   width: 100vw;
-  overflow-x: hidden;
   scroll-behavior: smooth;
+}
+
+.hidden {
+  overflow: hidden;
 }
 
 nav {
@@ -150,14 +153,14 @@ nav .burger-container.open .burger::after {
 }
 
 #home p {
-    font-size: 20px;
+  font-size: 20px;
   margin-bottom: 30px;
 }
 
 #home .btn-div {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
 
 #home button {
@@ -176,110 +179,128 @@ nav .burger-container.open .burger::after {
 }
 
 #home button a img {
-    margin-right: 3px;
+  margin-right: 3px;
 }
 
 #home button a .btn-text {
-    display: flex;
-    flex-direction: column;
-    text-align: left;
-    font-size: 12px;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  font-size: 12px;
 }
 
 #home button a .btn-text .platform {
-    font-weight: 600;
-}   
-
-#home .hero-images {
-    margin-top: 40px;
-    display: flex;
-    /* background-color: red; */
-    flex-direction: column;
-    justify-content: center;
-    /* align-items: center; */
-    /* width: 100%; */
+  font-weight: 600;
 }
 
-#home .hero-images .top-images, #home .hero-images .bottom-images {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: space-between;
+#home .hero-images {
+  margin-top: 40px;
+  display: flex;
+  /* background-color: red; */
+  flex-direction: column;
+  justify-content: center;
+  /* align-items: center; */
+  /* width: 100%; */
+}
+
+#home .hero-images .top-images,
+#home .hero-images .bottom-images {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
 }
 
 #home .hero-images .top-images {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 #home .hero-images .top-images .middle-one {
-    align-self: flex-end;
+  align-self: flex-end;
 }
 
 #home .hero-images .bottom-images .middle-two {
-    align-self: flex-start;
+  align-self: flex-start;
 }
 
 #home .hero-images img {
-    width: 30%;
+  width: 30%;
 }
 
-/* ABOUT SECTION *//* ABOUT SECTION *//* ABOUT SECTION *//* ABOUT SECTION */
+/* ABOUT SECTION */ /* ABOUT SECTION */ /* ABOUT SECTION */ /* ABOUT SECTION */
 #about {
-    padding: 0 27px;
-    margin: 30px 0;
+  padding: 0 27px;
+  margin: 50px 0;
 }
 
 #about h2 {
-    color: var(--primary-color);
-    text-transform: uppercase;
-    font-size: 25px;
+  color: var(--primary-color);
+  text-transform: uppercase;
+  font-size: 25px;
+  margin-bottom: 16px;
+}
+
+#about h4 {
+  font-size: 22px;
+  font-weight: 600;
+  margin-bottom: 30px;
+}
+
+#about img {
+  width: 100%;
 }
 
 #about p {
-    font-size: 22px;
-    font-weight: 400;
+  margin: 20px 0 20px 0;
+  font-size: 18px;
 }
 
-@media (max-width: 340px ) {
-    nav img {
-        width: 60px;
-        height: 60px;
-        position: relative;
-        left: -10px;
-    }
+#about .more {
+  font-size: 18px;
+  font-weight: 900;
+  text-decoration: underline;
+}
 
-    nav .burger-container {
-        position: relative;
-        right: 10px;
-        width: 40px;
-    }
+@media (max-width: 340px) {
+  nav img {
+    width: 60px;
+    height: 60px;
+    position: relative;
+    left: -10px;
+  }
 
-    #home {
-        padding: 0 10px;
-    }
+  nav .burger-container {
+    position: relative;
+    right: 10px;
+    width: 40px;
+  }
 
-    #home button a .btn-text {
-        font-size: 10px;
-    }
+  #home {
+    padding: 0 10px;
+  }
 
-    #about {
-        padding: 0 10px;
-    }
+  #home button a .btn-text {
+    font-size: 10px;
+  }
+
+  #about {
+    padding: 0 10px;
+  }
 }
 
 @media (min-width: 520px) {
-    #home .btn-div {
-        justify-content: space-evenly;
-    }
-    
-    #home button {
-        height: 70px;
-        width: 200px;
-    }
+  #home .btn-div {
+    justify-content: space-evenly;
+  }
 
-    #home button a .btn-text {
-        font-size: 16px;
-    }
+  #home button {
+    height: 70px;
+    width: 200px;
+  }
+
+  #home button a .btn-text {
+    font-size: 16px;
+  }
 }
 
 @media (min-width: 740px) {
@@ -306,17 +327,18 @@ nav .burger-container.open .burger::after {
 
   .nav-links ul li {
     background-color: transparent;
-    }
+  }
 
-    .nav-links ul li a {
-        transition: all .5s ease;
-    }
+  .nav-links ul li a {
+    transition: all 0.5s ease;
+  }
 
   .nav-links ul li a:hover {
     color: var(--primary-color);
   }
 
-  #home {
+  #home,
+  #about {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -345,10 +367,11 @@ nav .burger-container.open .burger::after {
     width: 100%;
   }
 
-  #home .hero-images .top-images, #home .hero-images .bottom-images {
+  #home .hero-images .top-images,
+  #home .hero-images .bottom-images {
     display: flex;
     justify-content: space-evenly;
-}
+  }
 
   #home .hero-images img {
     height: 300px;
@@ -357,25 +380,46 @@ nav .burger-container.open .burger::after {
     margin: 0 10px;
   }
 
-  #home .hero-images .top-images .middle-one, #home .hero-images .bottom-images .middle-two {
+  #home .hero-images .top-images .middle-one,
+  #home .hero-images .bottom-images .middle-two {
     height: 200px;
-    }
+  }
+
+  #about h2 {
+    font-size: 30px;
+  }
+
+  #about h4 {
+    font-size: 25px;
+  }
+
+  #about img {
+    width: 70%;
+  }
+
+  #about p {
+    font-size: 22px;
+    text-align: center;
+    max-width: 60%;
+  }
 }
 
 @media (min-width: 1100px) {
   #home .btn-div {
     width: 40%;
-  }  
+  }
 
   #home .hero-images {
     flex-direction: row;
   }
 
-  #home .hero-images .top-images, #home .hero-images .bottom-images {
+  #home .hero-images .top-images,
+  #home .hero-images .bottom-images {
     width: 50%;
   }
 
-  #home .hero-images .top-images .middle-one,#home .hero-images .bottom-images .middle-two{
+  #home .hero-images .top-images .middle-one,
+  #home .hero-images .bottom-images .middle-two {
     align-self: flex-start;
   }
 
@@ -386,9 +430,9 @@ nav .burger-container.open .burger::after {
 }
 
 @media (min-width: 1350px) {
- #home .hero-images img {
+  #home .hero-images img {
     height: 300px;
     width: 200px;
     margin: 0 10px;
-  }   
+  }
 }
