--- a/style.css
+++ b/style.css
@@ -298,7 +298,7 @@ nav .burger-container.open .burger::after {
 }
 
 #services .find__apart p {
-  font-size: 19px;
+  font-size: 20px;
 }
 
 #services .find__apart .image-part {
@@ -380,6 +380,36 @@ text-align: center;
     background-color: var(--footer);
 }
 
+#contact .contact__socials {
+    padding: 30px 27px;
+}
+
+#contact .contact__socials h2 {
+    margin-bottom: 20px;
+}
+
+#contact .contact__socials .socials img {
+    margin-right: 10px;
+    cursor: pointer;
+}
+
+footer {
+    color: white;
+    background-color: var(--footer);
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 27px 50px 27px;
+}
+
+footer h3 {
+    margin-bottom: 10px;
+}
+
+footer p {
+    font-size: 12px;
+    margin-bottom: 5px;
+}
+
 @media (max-width: 740px) {
   .hidden {
     overflow: hidden;
@@ -437,6 +467,24 @@ text-align: center;
   #contact .grey-container .btn {
     width: 48%;
   }
+
+  #contact .grey-container, #contact .contact__socials {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  footer {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  footer h3 {
+    font-size: 16px;
+}
+
+footer p {
+    font-size: 10px;
+}
 }
 
 @media (min-width: 520px) {
@@ -610,6 +658,25 @@ font-size: 20px;
 #contact .grey-container .btn {
     height: 60px;
     width: 250px;
+ }
+
+ #contact .contact__socials {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+ }
+
+ footer {
+    justify-content: space-evenly;
+    text-align: center;
+ }
+
+ footer h3 {
+    font-size: 25px;
+ }
+
+ footer p {
+    font-size: 16px;
  }
 }
 
