--- a/style.css
+++ b/style.css
@@ -324,13 +324,14 @@ nav .burger-container.open .burger::after {
 
 #services .find__apart button {
     margin-top: 20px;
+    color: black;
     background-color: var(--primary-color);
     border: none;
     width: 100%;
     height: 60px;
     border-radius: 5px;
     font-size: 18px;
-    font-weight: 600;
+    font-weight: 500;
     cursor: pointer;
 }
 
