--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 :root {
@@ -15,8 +16,8 @@
 body {
   font-family: "DM Sans", sans-serif;
   width: 100vw;
-  scroll-behavior: smooth;
-}
+ /* scroll-behavior: smooth; */
+ }
 
 nav {
   height: 80px;
@@ -156,6 +157,7 @@ nav .burger-container.open .burger::after {
   height: 50px;
   width: 48%;
   border-radius: 5px;
+  cursor: pointer;
 }
 
 #home button a {
@@ -246,6 +248,7 @@ nav .burger-container.open .burger::after {
   font-size: 18px;
   font-weight: 900;
   text-decoration: underline;
+  color: black;
 }
 
 /* SERVICES SECTION */
@@ -322,8 +325,10 @@ nav .burger-container.open .burger::after {
   margin-bottom: 20px;
 }
 
-#services .find__apart button {
-    margin-top: 20px;
+#services .find__apart a {
+  display: grid;
+  place-items: center;  
+  margin-top: 20px;
     color: black;
     background-color: var(--primary-color);
     border: none;
@@ -333,6 +338,7 @@ nav .burger-container.open .burger::after {
     font-size: 18px;
     font-weight: 500;
     cursor: pointer;
+    text-decoration: none;
 }
 
 /* CONTACT SECTION *//* CONTACT SECTION *//* CONTACT SECTION */
@@ -364,9 +370,10 @@ text-align: center;
 }
 
 #contact .grey-container .btn {
+    display: grid;
+    place-items: center;
     border: none;
     color: black;
-    cursor: pointer;
     height: 50px;
     width: 45%;
     border-radius: 5px;
@@ -379,6 +386,12 @@ text-align: center;
 #contact .grey-container .btn.two {
     color: white;
     background-color: var(--footer);
+}
+
+#contact .grey-container a {
+  width: inherit;
+ color: inherit;
+ text-decoration: none;
 }
 
 #contact .contact__socials {
@@ -409,6 +422,8 @@ footer h3 {
 footer p {
     font-size: 12px;
     margin-bottom: 5px;
+    color: white;
+    text-decoration: none;
 }
 
 @media (max-width: 740px) {
@@ -726,7 +741,7 @@ font-size: 20px;
 }
 
 @media (min-width: 900px) {
-    #services .find__apart button {
+    #services .find__apart a {
     width: 600px;
     align-self: center;
     margin-top: 40px;
